[package]
name = "betterops"
version = "0.1.0"
authors = ["KnightNiwrem <contact@knightniwrem.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^2.33.0", features = ["yaml"] }
dirs = "^3.0.0"
serde = "^1.0.0"
serde_json = "^1.0.0"
