[package]
name = "betterops"
description = "Helper CLI for managing multiple bash env \"profiles\""
version = "0.1.1"
authors = ["KnightNiwrem <contact@knightniwrem.com>"]
homepage = "https://github.com/KnightNiwrem/betterops"
repository = "https://github.com/KnightNiwrem/betterops"
readme = "README.md"
license = "MIT"
keywords = ["bash", "env", "profile"]
categories = ["command-line-utilities"]
edition = "2018"

[dependencies]
clap = { version = "^2.33.0", features = ["yaml"] }
dirs = "^3.0.0"
serde = "^1.0.0"
serde_json = "^1.0.0"
